# 765-Algo_s2-classwork

./: .floo  .gitignore  CMakeLists.txt  README.md
assignment-1/: task-3.cpp
sem1/assignment1/: README.md
sem1/assignment1/task1/: task-1_1  task-1_1.cxx  task-1_2.cxx  task-1_3.cxx  task-1_4.cxx  task-1_5.cxx  task-1_6.cxx  task-1_x.cxx
sem1/assignment1/task2/: task-2_1.cxx  task-2_2.cxx  task-2_3.cxx  task-2_4.cxx  task-2_x.cxx
sem1/assignment1/task3/: task-3_1.cxx  task-3_2.cxx  task-3_3.cxx  task-3_4.cxx
sem1/assignment1/task4/: task-4_1.cxx  task-4_2.cxx  task-4_3.cxx  task-4_x.cxx
sem1/assignment1/task5/: task-5_1.cxx  task-5_2.cxx  task-5_3.cxx  task-5_4.cxx
sem1/assignment1/task6/: task-6_1.cxx  task-6_2.cxx  task-6_3.cxx  task-6_4.cxx
sem1/assignment2/: README.md
sem1/assignment2/task1/: task-1_1.cxx  task-1_2.cxx  task-1_3.cxx  task-1_4.cxx
sem1/assignment2/task2/: task-2_1.cxx  task-2_2.cxx  task-2_3.cxx  task-2_4.cxx
sem1/assignment2/task3/: task-3_1.cxx  task-3_2.cxx  task-3_3.cxx  task-3_4.cxx
sem1/assignment2/task4/: task-4_1.cxx  task-4_2.cxx  (+1 more)
sem1/assignment3/: README.md
sem2/: 2_1_2.cpp  2_2_1.cpp  2_2_2.cpp  2_2_3.cpp  2_2_4.cpp  2_3_1.cpp  2_3_2.cpp  2_3_3.cpp  2_3_4.cpp  2_4_3.cpp  2_5_1.cpp  2_5_2.cpp  2_6_1.cpp
sem2/assignment1/: README.md
sem2/assignment2/: README.md
sem2/assignment3/: README.md
sem2/assignment4/: README.md
sem2/common/: CListGraph.h  IGraph.h
sem2/task2/: main.cpp
sem2/task5/: main.cpp
sem2/task6/: main.cpp
test/: 2_1_1.cpp  2_1_3.cpp  2_1_4.cpp  2_4_1.cpp  2_4_2.cpp  2_5_3.cpp
(+32 files in other folders)
